versioned_docs/version-2025.2.5/professor/fernanda_da_silva_ferreira.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Fernanda da Silva Ferreira",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Desenho Técnico e Topografia - 469",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "laboratorio_de_desenho_tecnico_sala_5-2",
          "students": [
            "AGO2025 - Grupo B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Educação Postural e Segurança no Trabalho - 471",
          "size": 1,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "",
          "students": [
            "AGO2026B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Desenho Técnico e Topografia - 469",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "laboratorio_de_desenho_tecnico_sala_5-2",
          "students": [
            "AGO2025 - Grupo A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Educação Postural e Segurança no Trabalho - 471",
          "size": 1,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "",
          "students": [
            "AGO2026A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Horticultura - 1090",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2023"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Planejamento Agropecuário - 2215",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Agroecologia e Desenvolvimento Rural Sustentável - 2468",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Educação Postural e Segurança no Trabalho - 471",
          "size": 1,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Inclusão digital / Processamento de Produtos Vegetal / Produção Vegetal - 001",
          "size": 4,
          "teachers": [
            "Elias Franco",
            "José Jurandir Pereira Junior",
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_3-1",
          "students": [
            "FAO2025-1"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Culturas III - 2222",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_6-2",
          "students": [
            "AGR2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Culturas I - 627",
          "size": 3,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Horticultura - 1090",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Sociologia Rural - 625",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Sociologia Rural - 625",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Direitos e deveres da trabalhadora / Produção Vegetal / Cidadania e Gênero / Formação profissional e tecnológica - 002",
          "size": 4,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes",
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_3-1",
          "students": [
            "FAO2025-1"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Culturas I - 627",
          "size": 3,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Agroecologia e Desenvolvimento Rural Sustentável - 2468",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "",
          "students": [
            "AGO2026B"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Fernanda da Silva Ferreira

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

